# coachtool

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
backend/: README.md  db.sqlite3
backend/.chainlit/: config.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  survey_cache.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_organization_company_id_organization_company_name_and_more.py  0003_remove_team_code_fields.py  0004_simplify_organization_fields.py  0005_favoritethread.py
backend/config/: settings.py  urls.py
backend/mcp_admin/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/mcp_admin/api/: views.py
backend/mcp_admin/migrations/: 0001_initial.py
backend/rag_admin/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/rag_admin/api/: views.py
backend/rag_admin/migrations/: 0001_initial.py
backend/rag_admin/services/: document_service.py  settings_service.py
backend/rag_admin/templates/admin/rag_admin/document/: change_list.html  upload.html
mcp_server/: server.py
my-ai-app/: app.py  pyproject.toml
my-ai-app/.chainlit/: config.toml
my-ai-app/rag/: embeddings.py  ingest.py  retrieve.py  store.py
my-ai-app/services/: database.py  llm.py
public/: chainlit-profile.css  chainlit-profile.js
scripts/: deploy_frontend.ps1  prepare_frontend.ps1
services/: langchain_agent.py  llm.py  mcp_client.py  router.py
